Fix font preload warnings by aligning crossorigin attributes and absolute paths

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url('assets/fonts/cormorant-garamond-regular.woff2') format('woff2');
+  src: url('/assets/fonts/cormorant-garamond-regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -12,7 +12,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: block;
-  src: url('assets/fonts/cormorant-garamond-bold.woff2') format('woff2');
+  src: url('/assets/fonts/cormorant-garamond-bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -20,7 +20,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: block;
-  src: url('assets/fonts/cormorant-garamond-bold.woff2') format('woff2');
+  src: url('/assets/fonts/cormorant-garamond-bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -28,7 +28,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url('assets/fonts/inter-regular.woff2') format('woff2');
+  src: url('/assets/fonts/inter-regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -36,7 +36,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: block;
-  src: url('assets/fonts/inter-regular.woff2') format('woff2');
+  src: url('/assets/fonts/inter-regular.woff2') format('woff2');
 }
 
 * { margin: 0; padding: 0; box-sizing: border-box; }
